2001-09-07  Alex Samuel  <samuel@codesourcery.com>

	* install.py: Substitute @python_version@ and @python_platform@.

2001-09-06  Alex Samuel  <samuel@codesourcery.com>

	* install.py: Exec setup_path.py.
	(packages): Build PyXML path.
	* doc/manual/test-tour.xml: Fix typos.

2001-09-05  Alex Samuel  <samuel@codesourcery.com>

	* standard.mk.in (doc): Check for empty SUBDIRS.
	($(HTMLMANIFEST)): Likewise.
g
2001-09-05  Alex Samuel  <samuel@codesourcery.com>

	* qm/Makefile.in (setup_path.py): Use left-quotes.
	($(SCRIPTS):%): Likewise.
	* qm/platform.py: Use Linux module for Irix.
	* qm/test/cmdline.py (Command.context_file_spec): Rename long
	option to load-context.
	* share/web/stylesheets/qm.css (a.help-link): Adjust color.
	* doc/manual/test-manual.xml: Adjust accordingly.
	* doc/manual/test-reference.xml: Likewise.

2001-09-05  Alex Samuel  <samuel@codesourcery.com>

	* configure.in: Set up gadfly.
	* configure: Regenerate.
	* Makefile.in (setup): Remove rule.
	(gadfly/sqlwhere.py): Likewise.
	* standard.mk.in (.PHONY): Remove setup.
	(setup): Remove rule.
	* qm.spec (build): Don't make setup.
	* README: Adjust accordingly.

2001-09-04  Alex Samuel  <samuel@codesourcery.com>

	* configure.in: Extract PYTHON_VERSION, PYTHON_PREFIX,
	PYTHON_PLATFORM. 
	* configure: Regenerate.
	* standard.mk.in (PYTHON_VERSION): New variable.
	(PYTHON_PREFIX): Likewise.
	(PYTHON_PLATFORM): Likewise.
	(MAKEFILE_PRE_IN): Likewise.
	* Makefile.in (zope-dtml/ExtensionClass/Makefile): Remove rule.
	(sgmlop/Makefile): Use MAKEFILE_PRE_IN.
	* qm/Makefile.in (setup_path.py): Substitute @python_version@ and
	@python_platform@. 
	* qm/setup_path.py.in (get_python_version): New function.
	(__python_version): New variable.
	(__python_platform): Likewise.
	Use them for PyXML path.
	* qm/structured_text.py (__entity_char_regex): Handle
	single-character entities only.
	(__entity_char_replacement): Likewise.
	* zope-dtml/ExtensionClass/Makefile.in (TOPDIR): New variable.
	Include standard.mk.